--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,7 @@ body {
 
 main {
   width: 100%;
-  height: 100%;
+  height: inherit;
   margin: 0;
   padding-top: 50px;
   background: linear-gradient(to bottom right, #121fcf 0%, #cf1512 100%);
@@ -53,7 +53,7 @@ input {
   background-color: #e7e7eb;
   border: none;
   border-radius: 0.2rem;
-  color: #ffffff;
+  color: #000000;
 }
 
 textarea {
@@ -94,6 +94,10 @@ input[type=file] {
 
 a {
   color: #dfdfe2;
+}
+
+#submit {
+  color: #ffffff;
 }
 
 #registration {
@@ -137,4 +141,4 @@ a {
 }
 #registration form fieldset .slots #countryCase {
   width: 80%;
-}/*# sourceMappingURL=registration.css.map */
+}/*# sourceMappingURL=app.css.map */
