--- a/src/app.scss
+++ b/src/app.scss
@@ -1,6 +1,7 @@
 $color_1: #f5f6f7;
 $color_2: #ffffff;
 $color_3: #dfdfe2;
+$color_4: #000000;
 $font-family_1: Tahoma;
 $background-color_1: linear-gradient(to bottom right, #121fcf 0%, #cf1512 100%);
 $background-color_2: #e7e7eb;
@@ -14,7 +15,7 @@ body {
 }
 main {
   width: 100%;
-  height: 100%;
+  height: inherit;
   margin: 0;
   padding-top: 50px;
   background: $background-color_1;
@@ -55,7 +56,7 @@ input {
   background-color: $background-color_2;
   border: none;
   border-radius: 0.2rem;
-  color: $color_2;
+  color: $color_4;
 }
 textarea {
   margin: 10px 0 0 0;
@@ -91,6 +92,10 @@ input[type="file"] {
 }
 a {
   color: $color_3;
+}
+
+#submit {
+  color: $color_2;
 }
 
 #registration {
